product list clean endpoint
