# storage/api-docs/api-docs.json
@@ -6857,6 +6857,49 @@
                 ]
             }
         },
+        "/getSupplierProductsClean": {
+            "post": {
+                "tags": [
+                    "Product"
+                ],
+                "summary": "Get products of the supplier without pagination.",
+                "description": "Get products of the supplier without pagination",
+                "operationId": "getSupplierProductsClean",
+                "parameters": [
+                    {
+                        "name": "supplier_id",
+                        "in": "query",
+                        "description": "the product id.",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "not found"
+                    },
+                    "500": {
+                        "description": "erreur serveur 500"
+                    }
+                },
+                "security": [
+                    {
+                        "Authorization": []
+                    }
+                ]
+            }
+        },
         "/addSupplier": {
             "post": {
                 "tags": [
